--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,6 +19,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Installing requirements
+      run: make requirements
+
     - name: Static code analysis
       run: make lint
 
