--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -22,13 +22,14 @@ jobs:
     - name: Installing requirements
       run: make requirements
 
-    - name: Static code analysis
+    - name: Static code analysis (pylint tool)
       run: make lint
 
-    - name: Securit checkings
+    - name: Code security checkings (bandit tool)
       run: make security
 
     - name: Unit tests
-      run: |
-        make unittest
-        make coverage
+      run: make unittest
+
+    - name: Code coverage
+      run: make coverage
